Carousel: fix active slide `z-index`, issue #1605

--- a/source/components/carousel/carousel.less
+++ b/source/components/carousel/carousel.less
@@ -29,6 +29,11 @@
         overflow: hidden;
         background-size: cover;
         background-repeat: no-repeat;
+        z-index: 1;
+
+        &.active-slide {
+            z-index: 2;
+        }
     }
 
     &.fixed-size {
